fix some errors

--- a/assets/localization/ar.json
+++ b/assets/localization/ar.json
@@ -95,7 +95,7 @@
     "Sign in": "تسجيل الدخول",
     "Welcome back! Log in to continue.": "مرحبًا بعودتك! سجّل الدخول للاستمرار.",
     "Password": "كلمة المرور",
-    "By joining, I agree to Tables' Terms of Use & Data Privacy Center": "بالانضمام، أوافق على شروط الاستخدام ومركز خصوصية البيانات الخاص بـTables",
+    "By joining, I agree to Tables' Terms of Use ": "بالانضمام الى Evento أوافق على شروط الاستخدام",
     "Join": "انضم",
     "Join our community and unlock exclusive features.": "انضم إلى مجتمعنا واستمتع بميزات حصرية.",
     "Month": "الشهر",
@@ -137,6 +137,7 @@
 "Event Location": "موقع الفعالية", "Event Organizer": "منظم الفعالية",
 "100,000 sp": "١٠٠,٠٠٠ sp", "Tax": "الضريبة",
 "20,000 sp": "٢٠,٠٠٠ sp",
+"sp":"ل س",
  "MasterCard": "ماستركارد",
 "Button pressed ...": "تم الضغط على الزر...", "Paid": "مدفوع",
 "Booking Details": "تفاصيل الحجز", "Date Of Event": "تاريخ الفعالية",
