--- a/assets/localization/ar.json
+++ b/assets/localization/ar.json
@@ -121,7 +121,7 @@
 "My data": "بياناتي",
  "Friends list": "قائمة الأصدقاء",
 "class": "فئة",
- "Additional options": "خيارات إضافية",
+ "Select Additional options": "تحديد خيارات إضافية",
 "Personal Information": "المعلومات الشخصية",
  "Fill profile / Friend list data": "ملء الملف الشخصي / بيانات قائمة الأصدقاء", 
 "First Name": "الاسم الأول",
