--- a/assets/localization/en.json
+++ b/assets/localization/en.json
@@ -142,7 +142,7 @@
 "My data": "My data",
 "Friends list": "Friends list",
 "class": "class",
-"Additional options": "Additional options",
+"Select Additional options": "Select Additional options",
 "Personal Information": "Personal Information",
 "Fill profile / Friend list data": "Fill profile / Friend list data",
 "Coupon Code": "Coupon Code",
