--- a/assets/localization/ar.json
+++ b/assets/localization/ar.json
@@ -374,10 +374,10 @@
 "Covering Areas": "المناطق المغطاة",
 "Please Choice Your Event Type":"يُرجى اختيار نوع الحدث الخاص بك",
 "Please Select Your Venue First":"الرجاء تحديد المكان الخاص بك أولاً",
-"Enchanted Evening & Festive Lights":"",
-"Tailored Experiences & Personalized Picks":"",
-"Local Celebrations & Urban Vibes":"",
-"Lively Gatherings & Illuminated Nights":"",
+"Enchanted Evening & Festive Lights":"أمسية ساحرة وأضواء احتفالية مبهرة",
+"Tailored Experiences & Personalized Picks":"تجارب حيوية ومميزة",
+"Local Celebrations & Urban Vibes":"احتفالات محلية نابضة بالحياة وأجواء عصرية",
+"Lively Gatherings & Illuminated Nights":"تجمعات فريدة وليالي رائعة",
 "Off":"خصم",
 "Expires at":"تنتهي عند"
   
