--- a/assets/localization/en.json
+++ b/assets/localization/en.json
@@ -375,6 +375,17 @@
  "Local Celebrations & Urban Vibes":"Local Celebrations & Urban Vibes",
  "Lively Gatherings & Illuminated Nights":"Lively Gatherings & Illuminated Nights",
  "Off":"Off",
- "Expires at":"Expires at"
- 
+ "Expires at":"Expires at",
+ "Event title":"Event title",
+ "No current coupons. Exclusive offers will be featured here as they're available.":"No current coupons. Exclusive offers will be featured here as they're available.",
+ "No favorites saved. Add your most loved events here.":"No favorites saved. Add your most loved events here.",
+ "All caught up! No new notifications right now.":"All caught up! No new notifications right now.",
+ "You haven't made any requests. Start by searching for events you're interested in!":"You haven't made any requests. Start by searching for events you're interested in!",
+ "No canceled bookings! Explore events to find your next great experience.":"No canceled bookings! Explore events to find your next great experience.",
+ "No completed bookings! Explore events to find your next great experience.":"No completed bookings! Explore events to find your next great experience.",
+ "No upcoming bookings! Explore events to find your next great experience.":"No upcoming bookings! Explore events to find your next great experience."
+ ,"It looks like no one has confirmed attendance yet. Be the first to join!":"It looks like no one has confirmed attendance yet. Be the first to join!",
+ "You haven't sent any friend requests yet. Find friends and expand your network!":"You haven't sent any friend requests yet. Find friends and expand your network!",
+ "No new friend requests. Send out some invites to get connected!":"No new friend requests. Send out some invites to get connected!",
+ "Your friends list is looking a bit lonely. Go ahead and connect with people!":"Your friends list is looking a bit lonely. Go ahead and connect with people!"
 }
