--- a/assets/localization/ar.json
+++ b/assets/localization/ar.json
@@ -354,7 +354,7 @@
 "Date of Birth": "تاريخ الميلاد",
 "+963 900000000": "+٩٦٣ ٩٠٠٠٠٠٠٠٠",
 "Male": "ذكر",
-"FeMale": "أنثى",
+"Female": "أنثى",
 "Gender": "الجنس",
 "Edit Profile": "تعديل الملف الشخصي",
 "Venue": "المكان",
