--- a/assets/localization/ar.json
+++ b/assets/localization/ar.json
@@ -401,5 +401,15 @@
   "Top Choices &  Highly Rated":"أفضل الاختيارات والأعلى تقييمًا",
   "Curated Concerts & Exclusive Engagements":"حفلات موسيقية مختارة وتجارب حصرية",
   "Freinds":"الأصدقاء",
-  "Search...":"البحث..."
+  "Search...":"البحث...",
+  "\"Evento\" App Usage Policy": "سياسة الاستخدام لتطبيق \"إيفينتو\"",
+  "1. Introduction": "1. مقدمة",
+  "\"Evento\" is a digital platform specialized in marketing and booking community events. Please read these terms of use carefully before using the app to ensure your understanding and agreement with these terms.": "تطبيق \"إيفينتو\" هو منصة رقمية متخصصة في تسويق وحجز الفعاليات المجتمعية. يُرجى قراءة شروط الاستخدام هذه بعناية قبل استخدام التطبيق لضمان فهمك وموافقتك على هذه الشروط.",
+  "2. Acceptance of Terms": "2. قبول الشروط",
+  "By using the \"Evento\" app, you agree to comply with these terms of use. If you do not agree to these terms, you must immediately stop using the app.": "باستخدامك لتطبيق \"إيفينتو\"، أنت توافق على الالتزام بشروط الاستخدام هذه. إذا كنت لا توافق على هذه الشروط، يجب عليك التوقف فورًا عن استخدام التطبيق.",
+  "3. Account Registration and Security": "3. تسجيل الحساب والأمان",
+  "Account Creation: Accurate and complete information must be provided when creating your account. This includes your name, age, and mobile phone number.Account Security: The user is responsible for maintaining the confidentiality of the password and any other registration information. The administration must be immediately informed of any unauthorized use of your account.": "• إنشاء الحساب: يجب تقديم معلومات دقيقة وكاملة عند إنشاء حسابك. يشمل ذلك اسمك، سنك، ورقم الهاتف الخلوي.\n• أمان الحساب: المستخدم مسؤول عن الحفاظ على سرية كلمة المرور وأي معلومات تسجيل أخرى. يجب إبلاغ الإدارة فورًا عن أي استخدام غير مصرح به لحسابك.",
+  "4. Use of the App": "4. استخدام التطبيق",
+  "•Legal Use: The app must be used in a legal and responsible manner. The use of the app for any illegal or prohibited purposes is forbidden.•Prohibited Content: It is prohibited to post or upload content that violates the rights of others, contains threats, obscenity, or breaches of public morals or ethics, or violates local and international laws.": "• الاستخدام القانوني: يجب استخدام التطبيق بطريقة قانونية ومسؤولة. يُحظر استخدام التطبيق لأي أغراض غير قانونية أو محظورة.\n• المحتوى المحظور: يُمنع نشر أو تحميل محتوى ينتهك حقوق الآخرين، يحتوي على تهديدات، فحش أو إخلال بالآداب أو الأخلاق العامة، أو يخالف القوانين المحلية والدولية.",
+  "5. Intellectual Property Rights": "5. حقوق الملكية الفكرية"
 }
