--- a/assets/localization/en.json
+++ b/assets/localization/en.json
@@ -393,5 +393,16 @@
  "Top Choices &  Highly Rated":"Top Choices &  Highly Rated",
  "Curated Concerts & Exclusive Engagements":"Curated Concerts & Exclusive Engagements",
  "Freinds":"Freinds",
- "Search...":"Search..."
+ "Search...":"Search...",
+  "\"Evento\" App Usage Policy": "\"Evento\" App Usage Policy",
+  "1. Introduction": "1. Introduction",
+  "\"Evento\" is a digital platform specialized in marketing and booking community events. Please read these terms of use carefully before using the app to ensure your understanding and agreement with these terms.": "\"Evento\" is a digital platform specialized in marketing and booking community events. Please read these terms of use carefully before using the app to ensure your understanding and agreement with these terms.",
+  "2. Acceptance of Terms": "2. Acceptance of Terms",
+  "By using the \"Evento\" app, you agree to comply with these terms of use. If you do not agree to these terms, you must immediately stop using the app.": "By using the \"Evento\" app, you agree to comply with these terms of use. If you do not agree to these terms, you must immediately stop using the app.",
+  "3. Account Registration and Security": "3. Account Registration and Security",
+  "Account Creation: Accurate and complete information must be provided when creating your account. This includes your name, age, and mobile phone number.Account Security: The user is responsible for maintaining the confidentiality of the password and any other registration information. The administration must be immediately informed of any unauthorized use of your account.":  "Account Creation: Accurate and complete information must be provided when creating your account. This includes your name, age, and mobile phone number.Account Security: The user is responsible for maintaining the confidentiality of the password and any other registration information. The administration must be immediately informed of any unauthorized use of your account.",
+  "4. Use of the App": "4. Use of the App",
+  "•Legal Use: The app must be used in a legal and responsible manner. The use of the app for any illegal or prohibited purposes is forbidden.•Prohibited Content: It is prohibited to post or upload content that violates the rights of others, contains threats, obscenity, or breaches of public morals or ethics, or violates local and international laws.": "•Legal Use: The app must be used in a legal and responsible manner. The use of the app for any illegal or prohibited purposes is forbidden.•Prohibited Content: It is prohibited to post or upload content that violates the rights of others, contains threats, obscenity, or breaches of public morals or ethics, or violates local and international laws.",
+  "5. Intellectual Property Rights": "5. Intellectual Property Rights"
+
 }
