--- a/assets/localization/ar.json
+++ b/assets/localization/ar.json
@@ -411,5 +411,15 @@
   "Account Creation: Accurate and complete information must be provided when creating your account. This includes your name, age, and mobile phone number.Account Security: The user is responsible for maintaining the confidentiality of the password and any other registration information. The administration must be immediately informed of any unauthorized use of your account.": "• إنشاء الحساب: يجب تقديم معلومات دقيقة وكاملة عند إنشاء حسابك. يشمل ذلك اسمك، سنك، ورقم الهاتف الخلوي.\n• أمان الحساب: المستخدم مسؤول عن الحفاظ على سرية كلمة المرور وأي معلومات تسجيل أخرى. يجب إبلاغ الإدارة فورًا عن أي استخدام غير مصرح به لحسابك.",
   "4. Use of the App": "4. استخدام التطبيق",
   "•Legal Use: The app must be used in a legal and responsible manner. The use of the app for any illegal or prohibited purposes is forbidden.•Prohibited Content: It is prohibited to post or upload content that violates the rights of others, contains threats, obscenity, or breaches of public morals or ethics, or violates local and international laws.": "• الاستخدام القانوني: يجب استخدام التطبيق بطريقة قانونية ومسؤولة. يُحظر استخدام التطبيق لأي أغراض غير قانونية أو محظورة.\n• المحتوى المحظور: يُمنع نشر أو تحميل محتوى ينتهك حقوق الآخرين، يحتوي على تهديدات، فحش أو إخلال بالآداب أو الأخلاق العامة، أو يخالف القوانين المحلية والدولية.",
-  "5. Intellectual Property Rights": "5. حقوق الملكية الفكرية"
+  "5. Intellectual Property Rights": "5. حقوق الملكية الفكرية",
+  "intellectualPropertyRights":"• حقوق التطبيق: جميع المحتويات الموجودة على التطبيق، بما في ذلك النصوص، الرسومات، والشعارات، محمية بحقوق الملكية الفكرية وتعود ملكيتها لتطبيق \"إيفينتو\" أو لمزودي المحتوى ومزودي الخدمة المسجلين والمعتمدين في التطبيق",
+"6. Event Advertising":"6. التسجيل كمزود خدمة",
+"registrationAsServiceProvider":"• التسجيل كمزود خدمة يقتضي الامتثال لكافة القوانين واللوائح الوطنية الناظمة لحماية المستهلك والمنافسة التجارية وكافة القوانين الأخرى ذات الصلة.• التسجيل كمزود خدمة على التطبيق يقتضي التعاقد مع التطبيق بشروط استخدام منفصلة."
+,"7. Registration as a Service Provider":"7. طلب تنظيم فعاليات والإعلان عنها عبر التطبيق"
+,"restaurantBookingPayment":"• لا يعلن التطبيق عن أية فعالية قبل دراسة طلب تنظيمها وإجازتها من التطبيق.•لا تعتبر العلاقات العقدية الناشئة عن الفعالية نافذة إلا عند موافقة التطبيق على الفعالية.",
+"8. Request to Organize and Advertise Events via the App":"8. اختيار مزودي الخدمة من منظمي الفعاليات",
+"cancellationAndRefund":"• اختيار منظم الفعالية لأحد مزودي الخدمة عند تنظيم فعالية ما هو مسؤولية منظم الفعالية.• تنحصر العلاقة التعاقدية لتنفيذ خدمة ما أو فعالية ما بين منظم الفعالية ومزود الخدمة.• التطبيق غير مسؤول عن تنفيذ الفعاليات ولا يضمن التزامات مزودي الخدمة. ويمكن للتطبيق متابعة التواصل مع مزود الخدمة فقط عند طلب منظم الفعالية.",
+"9. Selection of Service Providers by Event Organizers":"9. الحجز والدفع",
+"privacyAndDataProtection":"• عملية الحجز: يتم حجز التذاكر عبر التطبيق، ويجب على المستخدمين التحقق من تفاصيل الحجز بدقة قبل إتمام العملية. • طرق الدفع: يتم دفع ثمن التذاكر باستخدام وسائل الدفع الإلكتروني المعتمدة والآمنة.",
+"10. Booking and Payment":""
 }
