changing in all screens

--- a/assets/localization/ar.json
+++ b/assets/localization/ar.json
@@ -421,5 +421,13 @@
 "cancellationAndRefund":"• اختيار منظم الفعالية لأحد مزودي الخدمة عند تنظيم فعالية ما هو مسؤولية منظم الفعالية.• تنحصر العلاقة التعاقدية لتنفيذ خدمة ما أو فعالية ما بين منظم الفعالية ومزود الخدمة.• التطبيق غير مسؤول عن تنفيذ الفعاليات ولا يضمن التزامات مزودي الخدمة. ويمكن للتطبيق متابعة التواصل مع مزود الخدمة فقط عند طلب منظم الفعالية.",
 "9. Selection of Service Providers by Event Organizers":"9. الحجز والدفع",
 "privacyAndDataProtection":"• عملية الحجز: يتم حجز التذاكر عبر التطبيق، ويجب على المستخدمين التحقق من تفاصيل الحجز بدقة قبل إتمام العملية. • طرق الدفع: يتم دفع ثمن التذاكر باستخدام وسائل الدفع الإلكتروني المعتمدة والآمنة.",
-"10. Booking and Payment":""
+"10. Booking and Payment":"",
+
+
+
+
+"Logout":"تسجيل الخروج",
+"Are you sure you want to Logout?":"هل أنت متأكد أنك تريد تسجيل الخروج؟",
+"Yes, Logout":"نعم، تسجيل الخروج"
+
 }
