edit desihn event detailes

--- a/assets/localization/ar.json
+++ b/assets/localization/ar.json
@@ -182,9 +182,9 @@
 "See All": "عرض الكل",
 "Service Providers": "مزودو الخدمة",
 "Add to My Calendar": "أضف إلى تقويمي",
-"Event Timeline": "الجدول الزمني للفعالية",
+"Timeline": "الجدول الزمني",
 "Gallery (Pre-Event)": "معرض الصور (قبل الفعالية)",
-"Invite Friend": "دعوة صديق",
+"Share": "مشاركة",
 "Spark Events": "أحداث سبارك",
 "Deposit information": "معلومات الإيداع",
 "Refund policy": "سياسة الاسترداد",
