--- a/assets/localization/en.json
+++ b/assets/localization/en.json
@@ -211,8 +211,8 @@
 "Service Providers": "Service Providers",
 "Add to My Calendar": "Add to My Calendar",
 "See Location on Maps": "See Location on Maps",
-"Event Timeline": "Event Timeline",
-"Invite Friend": "Invite Friend",
+"Timeline": "Timeline",
+"Share": "Share",
 "Spark Events": "Spark Events",
 "Deposit information": "Deposit information",
 "More Events like this": "More Events like this",
